# $Id$

2006-12-30	Konstantin V. Arkhipov

	* main/Criteria/Criteria.class.php: cascading fetch-strategy is
	working again.

	* main/Containers/Unified/ManyToManyLinkedFull.class.php,
	main/Containers/Unified/ManyToManyLinkedLazy.class.php: removed
	distinct clause from fetch queries.

	* core/Criteria/: moved to main/.

	* core/DB/PostgresDialect.class.php: do-not-quote-integer's logic
	resurrected.

	* core/OSQL/GroupBy.class.php: re-introduced one more time.

2006-12-29	Konstantin V. Arkhipov

	* main/Flow/HttpRequest.class.php: get*Var() and has*Var() added;
	hasAttached() removed in favour of hasAttachedVar().

	* core/Cache/WatermarkedPeer.class.php: evil typo spotted and fixed.

	* core/Criteria/Projections: several simple object projections added
	for usage in Criteria.

	* main/Base/LightMetaProperty.class.php: light version of
	MetaClassProperty for usage in userspace.

	* core/Criteria/Criteria.class.php: distinct support added.

	* main/DAOs/StorableDAO.class.php: correct support for OneToMany
	relations implemented in property's path digging.

2006-12-27	Konstantin V. Arkhipov

	* core/Form/PlainForm.class.php, core/Form/Primitives/: clean()
	implemented.

2006-12-26	Konstantin V. Arkhipov

	* meta/builders/AutoDaoBuilder.class.php: uncacheLists() now call's
	same method in all referencing objects.

	* core/DB/, main/DAOs/, main/Criteria/: joined fetching strategy
	implemented.

	* core/Cache/ReferencePool.class.php: doesn't stores single
	dao-connected objects.

	* main/DAOs/GenericDAO.class.php: so-called 'identity map' addded.

	* meta/: now generates make-methods for cascading and batch object's
	building.

	* meta/patterns/SpookedEnumerationPattern.class.php: one more pattern,
	as requested by Sherman.

	* main/DAOs/StorableDAO.class.php: prevent duplicate joins in
	Criteria's processing.

	* meta/builders/AutoClassBuilder.class.php: containers will be
	recreated when lazy-switch differs.

2006-12-24	Konstantin V. Arkhipov
